<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/basic_category"
        android:title="@string/basic_category_title">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/bezout"
                    android:title="@string/bezout_item_title" />

                <item
                    android:id="@+id/discrete_log"
                    android:title="@string/discrete_log_item_title" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/cryptography_category"
        android:title="@string/cryptography_algorithm_category_title">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/rsa"
                    android:title="RSA" />
                <item
                    android:id="@+id/el-gamal"
                    android:title="ElGamal" />
            </group>
        </menu>
    </item>

    <group>
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_white"
            android:title="@string/settings_view" />

        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_info_white"
            android:title="@string/about_view" />
    </group>

</menu>