<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ElGamalFragment">


    <io.github.kexanie.library.MathView
        android:id="@+id/el_gamal_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        app:engine="KaTeX"
        app:text="@string/el_gamal_introduction" />


    <EditText
        android:id="@+id/el_gamal_p_edit_text"
        style="@style/CustomEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/el_gamal_description"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/el_gamal_type_toggle"
        android:hint="@string/el_gamal_p_hint" />

    <ToggleButton
        android:id="@+id/el_gamal_type_toggle"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_below="@id/el_gamal_description"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:background="@drawable/toggle"
        android:checked="true"
        android:textAlignment="textStart"
        android:textColor="@color/colorOnPrimary"
        android:textOff="  INTEGER     EC POINT"
        android:textOn="  INTEGER     EC POINT" />


    <EditText
        android:id="@+id/el_gamal_alpha_edit_text"
        style="@style/CustomEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/el_gamal_p_edit_text"
        android:hint="@string/el_gamal_alpha_hint" />

    <EditText
        android:id="@+id/el_gamal_beta_edit_text"
        style="@style/CustomEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/el_gamal_alpha_edit_text"
        android:hint="@string/el_gamal_beta_hint" />

    <EditText
        android:id="@+id/el_gamal_c_edit_text"
        style="@style/CustomEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/el_gamal_beta_edit_text"
        android:hint="@string/el_gamal_c_hint" />

    <EditText
        android:id="@+id/el_gamal_gamma_edit_text"
        style="@style/CustomEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/el_gamal_c_edit_text"
        android:hint="@string/el_gamal_gamma_hint" />

    <Button
        android:id="@+id/el_gamal_calculate_button"
        style="@style/CustomButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/el_gamal_gamma_edit_text"
        android:text="@string/calculate_button" />

</RelativeLayout>